kubernetes/apps/myspeed/app/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myspeed
  namespace: myspeed
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: myspeed
      app_name: myspeed
  template:
    metadata:
      labels:
        app: myspeed
        app_name: myspeed
    spec:
      containers:
        - name: myspeed
          image: germannewsmaker/myspeed:1.0.9@sha256:3a3e774b3f78d930a5a962d625b99bcb3d71730bfeb4a6b93e04fd38cfe7d9a9
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /myspeed/data
              name: myspeed
          resources:
            requests:
              cpu: 1m
              memory: 100Mi
            limits:
              memory: 100Mi
          ports:
            - containerPort: 5216
              protocol: TCP
      restartPolicy: Always
      volumes:
        - name: myspeed
          persistentVolumeClaim:
            claimName: myspeed
