kubernetes/apps/myspeed/app/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myspeed
  namespace: myspeed
  labels:
    app: myspeed
    app_name: myspeed
spec:
  type: ClusterIP
  ports:
    - name: web-ui
      port: 5216
  selector:
    app_name: myspeed
