kubernetes/apps/myspeed/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gatus.home-operations.com/endpoint: |
      name: "MySpeed"
  name: myspeed
  namespace: myspeed
spec:
  hostnames: ["myspeed.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: myspeed
          namespace: myspeed
          port: 5216
      matches:
        - path:
            type: PathPrefix
            value: /
